# TTK4145-Project

./: Cargo.toml  README.md
Exercises/ex3/src/: master.rs
Exercises/ex4/: Cargo.toml  ans.md
Exercises/ex4/src/: main.rs
Exercises/ex5/: ans.md
Exercises/ex5/conditionvariable/: condvar.d
Exercises/ex5/messagepassing/: priorityselect.go  request.go
Exercises/ex5/protectedobject/: protectobj.adb
Exercises/ex5/semaphore/: semaphore.d
Project/: README.md
Project/src/: main.rs  prelude.rs
Project/src/client/: elevator.rs
exercises/ex3_solution/: main.rs
src/: elevator.rs  lib.rs  main.rs  master.rs  prelude.rs  utils.rs
src/client/: elevator.rs  master.rs
src/driver/: mod.rs
src/network/: server.rs
src/networking/: server.rs
