[package]
name = "ex4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
driver-rust = { git = "https://github.com/TTK4145/driver-rust"}
crossbeam-channel = "0.5"
cli-table = "0.4"
clearscreen = "4.0.1"
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.97"